# cmake_learning

./: CMakeLists.txt
source/: CMakeLists.txt
source/common/: CMakeLists.txt
source/common/include/: common.h  comomdef.h  print_struct.h
source/common/source/: common.c  print_struct.c
source/core/: CMakeLists.txt
source/core/include/: core.h
source/core/source/: core.c
